--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 						<div class="col-lg-6" style="align: center;">
 							<div class="banner_content">
 								<h3>Hello, I'm</h3>
-								<h2>Md. Jahidul Islam</h2>
+								<h2><a href="https://www.cstu.ac.bd/t/jahid" target="_blank" style="text-decoration: none;">Md. Jahidul Islam</a></h2>
 								<h5>Lecturer</h5>
-								<h5>Department of Computer Science and Engineering</h5>
-								<h5><a href="https://cstu.ac.bd/" target="_blank" style="text-decoration: none;">Chandpur Science and Technology University</a></h5>
+								<h5><a href="https://www.cse.cstu.ac.bd/" target="_blank" style="text-decoration: none;">Department of Computer Science and Engineering</a></h5>
+								<h5><a href="https://www.cstu.ac.bd/" target="_blank" style="text-decoration: none;">Chandpur Science and Technology University</a></h5>
 							  <h5><img src="https://camo.githubusercontent.com/7ab215921c50fbae1fd1bbc0984a81b4212019ed2beba624d0a7509c6ff41332/68747470733a2f2f6b6f6d617265762e636f6d2f67687076632f3f757365726e616d653d6a616869642d6a61626564266c6162656c3d50726f66696c65253230566965777326636f6c6f723d306537356236267374796c653d666c6174" alt="jahid-jabed" data-canonical-src="https://komarev.com/ghpvc/?username=jahid-jabed&amp;label=Profile%20Views&amp;color=0e75b6&amp;style=flat" style="max-width: 100%;"></h5>
 								<div class="row projects-filter" style="text-align: center;">
 
